# lme_face_recognition

./: CMakeLists.txt  README.md  conanfile.py
lme_face_recognition/: CMakeLists.txt  main.cpp
lme_face_recognition_core/: CMakeLists.txt
lme_face_recognition_core/impl/: image.cpp  image.h  recognition_engine_impl.cpp  recognition_engine_impl.h
lme_face_recognition_core/interfaces/: recognition_engine.h
lme_face_recognition_core/model/: figure.h  rectangle.cpp  rectangle.h
tests/unit/: CMakeLists.txt
